# SahlNLP

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml  python-app.yml  tests.yml
benchmarks/: bench.py
src/sahlnlp/: __init__.py
src/sahlnlp/core/: __init__.py  analyzer.py  cleaner.py  converter.py  guardian.py  normalizer.py
src/sahlnlp/utils/: __init__.py  constants.py  dictionaries.py  logger.py
tests/: test_analyzer.py  test_cleaner.py  test_converter.py  test_fallbacks.py  test_guardian.py  test_normalizer.py
