[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sahlnlp"
version = "1.1.0"
description = "A zero-dependency, ultra-fast Arabic NLP toolkit for text preprocessing, normalization, and advanced analysis."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "SahlNLP Contributors"},
]
keywords = ["arabic", "nlp", "text-processing", "normalization", "tafkeet", "preprocessing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Processing :: Linguistic",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov>=5.0", "ruff>=0.8", "black>=24.0", "pre-commit>=3.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["sahlnlp"]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 95
show_missing = true
skip_empty = true

[tool.ruff]
src = ["src", "tests"]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.black]
line-length = 88
target-version = ["py39"]
